src/app/app_render_tests/snapshots/jiq__app__app_render_tests__basic_ui_tests__snapshot_ui_operator_mode.snap
---
source: src/app/app_render_tests/basic_ui_tests.rs
expression: output
---
"╭ Object ──────────────────────────────────────────────────────────────────────╮"
"│{                                                                             │"
"│  "test": true                                                                │"
"│}                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰───────────────────────────────────────────────────────────────── L1-3/3 (0%) ╯"
"╭ Query [OPERATOR(d)] ──────────────────────────────────── Ctrl+A AI Assistant ╮"
"│                                                                              │"
"╰t+Tab Navigate Results • Ctrl+P Previous Query • Ctrl+N Next Query • Ctrl+R Hi╯"
" F1/? Help • Ctrl+S Snippets • Ctrl+F Search • Enter Output Result • Ctrl+O Copy"
