src/app/app_render_tests/snapshots/jiq__app__app_render_tests__basic_ui_tests__snapshot_ui_results_horizontal_scroll_via_trackpad.snap
---
source: src/app/app_render_tests/basic_ui_tests.rs
assertion_line: 96
expression: output
---
"╭ Object  · . ──────────────────────────────────────────────────── L1-3/3 (0%) ╮"
"▌                                                                              │"
"│EFGHIJABCDEFGHIJABCDEFGHIJABCDEFGHIJABCDEFGHIJABCDEFGHIJABCDEFGHIJABCDEFGHIJA │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰───── Ctrl+T Edit Query • i Edit Query • > value • * iterate • ^ parent ──────╯"
"╭ Query [INSERT] ───────────────────────────────────────── Ctrl+A AI Assistant ╮"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
" F1/? Help • Ctrl+T Edit Query • Ctrl+S Snippets • Ctrl+F Search • Ctrl+W Save •"
