src/app/app_render_tests/snapshots/jiq__app__app_render_tests__basic_ui_tests__snapshot_ui_small_terminal.snap
---
source: src/app/app_render_tests/basic_ui_tests.rs
assertion_line: 122
expression: output
---
"╭ Object ──────────────────────────────╮"
"│{                                     │"
"│  "name": "Alice"                     │"
"│}                                     │"
"│                                      │"
"╰───────────────────────── L1-3/3 (0%) ╯"
"╭ Query [INSERT] ─ Ctrl+A AI Assistant ╮"
"│                                      │"
"╰ts • Ctrl+P Previous Query • Ctrl+N Ne╯"
" F1 Help • Ctrl+S Snippets • Ctrl+F Sear"
